syntax = "proto3";

option csharp_namespace = "GrpcServer";

package custom;

// The greeting service definition.
service Custom {
  // Sends a greeting
  rpc SayYourName (SayYourNameRequest) returns (SayYourNameReply);
}

// The request message containing the user's name.
message SayYourNameRequest {
  string firstName = 1;
  string lastName = 2;
}

// The response message containing the greetings.
message SayYourNameReply {
  string message = 1;
}